force-app/main/default/objects/RentConsignmentFeeDetail__c/RentConsignmentFeeDetail__c.object-meta.xml
<CustomObject>
    <label>家賃委託料明細</label>
    <nameField>
        <displayFormat>No-{0000}</displayFormat>
        <label>家賃委託料明細名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>