force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/BackConsignmentChargeAmount__c.field-meta.xml
<CustomField>
    <fullName>BackConsignmentChargeAmount__c</fullName>
    <label>遡り委託料金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>