force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/BillingCorporateHousingCategory__c.field-meta.xml
<CustomField>
    <fullName>BillingCorporateHousingCategory__c</fullName>
    <label>請求社宅区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>