force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/BillingTargetIs__c.field-meta.xml
<CustomField>
    <fullName>BillingTargetIs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求対象フラグ</label>
    <type>Checkbox</type>
</CustomField>