force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/ConsignmentFluctuationCategory__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentFluctuationCategory__c</fullName>
    <label>委託料増減変区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>