force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/ContractPrimitiveDate__c.field-meta.xml
<CustomField>
    <fullName>ContractPrimitiveDate__c</fullName>
    <label>契約原始日</label>
    <type>Date</type>
</CustomField>