force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/DetailTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>DetailTotalAmount__c</fullName>
    <label>明細合計金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>