force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <label>社員名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>