force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/EmployeeNo__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNo__c</fullName>
    <label>社員番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>