force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <label>項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>