force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/IndemnificationPlanDAmount__c.field-meta.xml
<CustomField>
    <fullName>IndemnificationPlanDAmount__c</fullName>
    <label>補償プランD金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>