force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/LastFullRentYearMonth__c.field-meta.xml
<CustomField>
    <fullName>LastFullRentYearMonth__c</fullName>
    <label>最終満家賃年月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>