force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/LastMonthCommonChargeAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>LastMonthCommonChargeAdjustmentAmount__c</fullName>
    <label>前月共益費調整額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>