force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/LastMonthCorporateHousingCategory__c.field-meta.xml
<CustomField>
    <fullName>LastMonthCorporateHousingCategory__c</fullName>
    <label>前月社宅区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>