force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/LastMonthManagementChargeAmount__c.field-meta.xml
<CustomField>
    <fullName>LastMonthManagementChargeAmount__c</fullName>
    <label>前月管理費金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>