force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/LastMonthOtherAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>LastMonthOtherAmountTotal__c</fullName>
    <label>前月その他金額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>