force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/LastMonthRentAmount__c.field-meta.xml
<CustomField>
    <fullName>LastMonthRentAmount__c</fullName>
    <label>前月家賃金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>