force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/Other1Name__c.field-meta.xml
<CustomField>
    <fullName>Other1Name__c</fullName>
    <label>その他1名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>