force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/Other4Name__c.field-meta.xml
<CustomField>
    <fullName>Other4Name__c</fullName>
    <label>その他4名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>