force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/Other6Name__c.field-meta.xml
<CustomField>
    <fullName>Other6Name__c</fullName>
    <label>その他6名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>