force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/OtherAdditionName__c.field-meta.xml
<CustomField>
    <fullName>OtherAdditionName__c</fullName>
    <label>その他合算名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>