force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/OtherAdditionTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>OtherAdditionTaxAmount__c</fullName>
    <label>その他合算税額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>