force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/OtherAdditionTaxRate__c.field-meta.xml
<CustomField>
    <fullName>OtherAdditionTaxRate__c</fullName>
    <label>その他合算税率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>