force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/RentConsignmentDetailId__c.field-meta.xml
<CustomField>
    <fullName>RentConsignmentDetailId__c</fullName>
    <externalId>true</externalId>
    <label>家賃委託料明細ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>