force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/RentLastPayDate__c.field-meta.xml
<CustomField>
    <fullName>RentLastPayDate__c</fullName>
    <label>家賃最終負担日</label>
    <type>Date</type>
</CustomField>