force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/SerialNum__c.field-meta.xml
<CustomField>
    <fullName>SerialNum__c</fullName>
    <label>通番</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>