force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/ThisMonthBasicMaintenanceChargeAmount__c.field-meta.xml
<CustomField>
    <fullName>ThisMonthBasicMaintenanceChargeAmount__c</fullName>
    <label>当月BASIC保守料金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>