force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/ThisMonthCommonChargeAmount__c.field-meta.xml
<CustomField>
    <fullName>ThisMonthCommonChargeAmount__c</fullName>
    <label>当月共益費金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>