force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/ThisMonthGarageAmount__c.field-meta.xml
<CustomField>
    <fullName>ThisMonthGarageAmount__c</fullName>
    <label>当月駐車場金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>