force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/ThisMonthManagementChargeAmount__c.field-meta.xml
<CustomField>
    <fullName>ThisMonthManagementChargeAmount__c</fullName>
    <label>当月管理費金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>