force-app/main/default/objects/RentConsignmentFeeDetail__c/fields/ThisMonthRentAmount__c.field-meta.xml
<CustomField>
    <fullName>ThisMonthRentAmount__c</fullName>
    <label>当月家賃金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>