force-app/main/default/objects/RentConsignmentFeeDetail__c/listViews/RentConsignmentFeeDetail.listView-meta.xml
<ListView>
    <fullName>RentConsignmentFeeDetail</fullName>
    <columns>NAME</columns>
    <columns>RealEstateName__c</columns>
    <columns>ConsignmentChargeAmount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ListViewLoginUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>家賃委託料明細</label>
</ListView>